# WC3-Local-API

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: discovery.rs  error.rs  lib.rs  socket.rs
